<resources>
    <string name="app_name">Home_Cooking_App</string>
    <string name="saladimage">saladimage</string>
    <string name="chatniimage">chatniimage</string>
    <string name="achharimage">achharimage</string>
    <string name="breakfastimage">breakfastimage</string>
    <string name="fastingfoodimage">fastingfoodimage</string>
    <string name="parathe_roti_image">parathe_roti_image</string>
    <string name="cooking">cooking</string>
    <string name="salad_or_rayta">सलाद और रायता</string>
    <string name="chatni1">चटनी</string>
    <string name="achar">अचार</string>
    <string name="nashta">नाश्ता</string>
    <string name="vrat_ka_falhar">व्रत का फलहार</string>
    <string name="thalipith_or_parathe">थालीपीठ और पराठे</string>
    <string name="vidhi">विधि</string>
    <string name="samgri">सामग्री</string>
    <string name="americancorn">americancorn</string>
    <string name="aloo_poha">आलू पोहा</string>
    <string name="aloo_poha1">aloo_poha</string>
    <string name="saamgri4">सामग्री</string>
    <string name="vidhi4">विधि</string>
    <string name="discription">- उबले आलू छीलकर एक बर्तन में अच्छी तरह मैश या कद्दूकस कर लें.\n
        - फिर इसमें अदरक, बारीक कटी हुई हरी मिर्च, कॉर्नफ्लोर या सूजी, लाल मिर्च पाउडर, भुना जीरा पाउडर, चाट मसाला पाउडर, बारीक कटा हरा धनिया, अमचूर पाउडर, ब्रेड का चूरा और नमक डालकर अच्छी तरह मिला लें.\n
        - इसके बाद आलू का मिश्रण थोड़ा-थोड़ा हाथ में लेकर गोल करके चपटा करें. पूरे मिश्रण की इसी तरह टिक्कियां बना लें. सेट करने के लिए इनको 10 से 15 मिनट तक फ्रिज में रखें.\n
        - फिर टिक्कियां फ्रिज से निकालें और नॉन-स्टिक पैन में एक छोटा चम्मच तेल डालकर गैस पर गर्म करें. मध्यम आंच पर पहले से तैयार सारी टिक्कियों को एक-एक करके पैन में रखकर दोनों तरफ से सुनहरा होने तक सेकें. अगर पैन में तेल कम लगे तो और तेल डाल सकते हैं.\n
        - गर्मागर्म आलू की टिक्कियां तैयार हैं. १-२ आलू टिक्की को प्लेट मे रखकर इन्हें प्लेट में रखकर फेंटा हुआ दही, खट्टी मीठी खजूर-इमली की चटनी, हरी चटनी, पापड़ी, लाल मिर्च पाउडर और हल्का नमक डालकर परोसें.</string>
    <string name="discription2">- 4 से 5 उबले आलू\n
        - आधा कप ब्रेड का चूरा\n  - 2 चम्मच कॉर्नफ्लोर या सूजी (टिक्की में कुरकुरेपन के लिए)\n
        - एक इंच कद्दूकस किया हुआ अदरक का टुकड़ा\n
        - 3 से 4 बारीक काटी हरी मिर्च\n
        - एक चम्मच चाट मसाला पाउडर\n
        - आधा छोटा चम्मच अमचूर पाउडर\n
        - आधा चम्मच भुना जीरा पाउडर\n
        - आधा छोटा चम्मच लाल मिर्च पाउडर\n
        - बारीक कटा हरा धनिया\n
        - स्वादानुसार नमक\n
        - तेल</string>
    <string name="discription1">- २ कप पोहा\n - २ उबले हुए आलू\n - १ पियाज\n - १/२ चमच अदरक पेस्ट\n - १ चमच हरी मिर्च पेस्ट\n - १ चमच चीनी\n - नमक स्वाद नुसार\n - १ चमच निम्बू रस\n - १ चमच राइ\n - हींग चुटकीभर\n - २ चमच धनिया पत्ती\n -१ चमच तेल\n</string>
    <string name="discription3">- पोहे को धो कर कुछ देर पानी निधार कर रखे\n - जैसे ही राय तड़कने लगे तभी कटी हुई प्याज दाल कर उसे ५ मिनट तक पकने दे\n - फिर उसमे अदरक और हरी मिर्च पेस्ट डाले\n - इसे कुछ मिनट पकने के बाद इसमें उबले आलू डालिये और माध्यम सी आंच पर ४-५ मिनट पकाएं\n - अब इसमें पोहा, नमक, निम्बू, और चीनी डाले\n - अब सब मिक्स कर के ५ मिनट तक पकाएं और कटी हरी धनिया छिड़के\n - आंच बांध कर दे और गरम गरम पोहा सर्व करे.</string>
    <string name="discription4"> - ३ कप उबली हुए स्वीट कॉर्न\n - १/३ कप बारीक़ कटे हरे पत्ते वाले प्याज\n - १/३ कप टमाटर बारीक़ कटे हुए\n - नमक, काली मिर्च पाउडर स्वाद नुसार\n - १ छोटी चमच निम्बू रस</string>
    <string name="discription5"> - सभी सब्जियों को एक साथ मिला लीजिये\n - इन पर निम्बू का रस, काली मिर्च पाउडर और नमक छिड़क कर सर्व कीजिये</string>
    <string name="discription6"> - अंगूर - 200 ग्राम\n - अनार - 1\n - आम - 1\n - सैफ - 1\n - चीनी - 3/4 कप (150 ग्राम)\n - कस्टर्ड - 1/4 कप से थोड़ा सा अधिक\n - दूध - 1 लीटर</string>
    <string name="discription7">- किसी बर्तन में दूध को उबलने के लिये रख दीजिये, 3/4 कप ठंडा दूध बचा लीजिये.\n - बचे हुये ठंडे दूध में कस्टर्ड पाउडर डालकर अच्छी तरह तब तक घोलिये कि कस्टर्ड की गुठलियां खतम हो जायं.\n - दूध में उबाल आने के 4-5 मिनिट तक दूध को उबलने के बाद, कस्टर्ड घोल डालते जाइये, और दूध को चमचे से चलाते जाइये, सारा कस्टर्ड घोल डालकर अच्छी तरह मिक्स कर दीजिये.\n -चीनी भी डाल दीजिये. कस्टर्ड को दूध के साथ लगातार चलाते हुये, 7-8 मिनिट तक गाढ़ा होने तक पका लीजिये.\n -फ्रूट आम और सेब को छील कर छोटे छोटे टुकड़े में काट कर तैयार कर लीजिये, अनार को छील कर दाने निकाल लीजिये. अंगूर को डंठल से तोड़कर अलग कर लीजिये. पके हुये कस्टर्ड को ठंडा होने के बाद उसमें, तैयार कटे फ्रूट और क्रीम डालकर मिला दीजिये.\n - तैयार फ्रूट कस्टर्ड को 2-3 घंटे के लिये फ्रिज में रख दीजिये.\n ठंडा होने के बाद फ्रूट कस्टर्ड का स्वाद बहुत अच्छा हो जाता है. ठंडा ठंडा स्वादिष्ट कस्टर्ड लन्च या डिनर किसी भी खाने के बाद, या आपका कुछ ठंडा मीठा खाने का मन हो परोसिये और खाइये. सुझाव: फ्रूट कस्टर्ड के लिये फल अपनी मन पसन्द के अनुसार ले सकते हैं, जो फल आपको पसन्द न हों या नहीं मिल रहे हैं, उन्हैं छोड़ा जा सकता है. तरबूज फ्रूट कस्टर्ड में नहीं डाले क्यों कि इसमें बहुत अधिक जूस होने के कारण ये फ्रूट कस्टर्ड को पतला कर देता है.</string>
    <string name="discription8"> - दही: 2 कप\n - टमाटर: 1/2 कप\n - कटा हुआ प्याज: 1/4 कप\n - कटा हुआ जीरा पाउडर: 1 चम्मच\n - नमक: स्वाद अनुसार</string>
    <string name="discription9">- एक बाउल में दही लेकर उसे अच्छे से फेट ले।\n - बारीक कटा हुआ टमाटर और प्याज डाले और मिला ले।\n - अब जीरा पाउडर और नमक डाले और फेट ले।\n टमाटर प्याज रायता तैयार है। दही रायता ठंडा या साधारण तापमान पे परोस सकते है। यह रायता चावल के व्यंजन जैसे पुलओ (तवा पुलओ), बिरियानी वगैरा के साथ अच्छा लगता है।</string>
    <string name="discription10">- फैंटा हुआ दही - 500 ग्राम\n - कटे हुये अन्नानास - 1/2 कप (100 ग्राम)\n - अन्नानास का पल्प - 1/2 कप (100 ग्राम)\n - चीनी - 1/4 कप (50 ग्राम)\n -हरा धनिया - 2 टेबल स्पून (बारीक कटा हुआ)\n - भुना जीरा पाउडर - 1/2 छोटी चम्मच\n - नमक - 1/3 छोटी चम्मच या स्वादानुसार\n</string>
    <string name="discription11">- अन्नानास का रायता बनाने के लिये 100 ग्राम अन्नानास को छोटे-छोटे टुकड़ों में काटिये और मिक्सी की मदद से पेस्ट बना लीजिये\n और अलग से 100 ग्राम अन्नानास लेकर उसे छोटे छोटे टुकड़ों में काट कर तैयार कर लीजिए.\n - पैन को गैस पर रखिये और इसमें अन्नानास का पल्प व इसके बाद चीनी डालकर चमचे से लगातार चलाते हुए इसे पकाएं.\n - अन्नानास के पेस्ट और चीनी के बाद, कटे हुये अन्नानास के टुकड़ों को पैन में डाल कर थोड़ा सा पका लीजिये ताकि अन्नानास का कच्चापन खत्म हो जाये.\n - अन्नानास के अच्छा गाढ़ा दिखने और सुगंध आने तक पका लीजिये.\n - अन्नानास को हल्का सा पकाने के बाद गैस को बंद कर दीजिये.\n - पकाये हुये अन्नानास को एक प्लेट में निकाल लीजिये और ठंडा होने दीजिये.\n - अन्नानास के ठंडे होने के बाद, फैंटे हुये दही में डाल लीजिये.\n साथ ही साथ नमक और थोड़ा सा हरा धनिया डाल कर अच्छे से सभी सामग्री के मिलने तक मिला लीजिये.\n तैयार अन्नानास के रायते के ऊपर जरा सा भुना जीरा पाउडर, अनारदाने डाल कर गार्निश कर लीजिये.\n \n  अन्नानास का रायता परोसने के लिये तैयार है, आपका जब मन करे तब इस स्वादिष्ट रायते को बनाकर खाइये और खिलाईये. सुझाव अपने स्वादानुसार चीनी को कम या ज्यादा ले सकते हैं. ताजा अन्नानास उपलब्ध न हो तो आप फ्रोजन अन्नानास भी ले सकते हैं. अन्ननास के रायते में सामान्य नमक की जगह सैंधा नमक का प्रयोग करके व्रत में भी उपयोग कर सकते हैं.</string>
    <string name="discription12">- बर्तन में दही डालकर फेंट लें. दही को पतला नहीं करना है.\n - अब दही में बूंदी, लाल मिर्च, जीरा पाउडर और नमक डालें.\n - सभी को अच्छी तरह मिक्स कर लें.\n - तैयार है बूंदी का जायकेदार रायता . इसे हरी धनिया पत्तियों से गार्निश करके खाने के साथ परोसें.</string>
    <string name="discription13">- 1 कप बूंदी\n - 2 कप दही\n - 1 छोटा चम्मच भुना हुआ जीरा पाउडर\n - स्वादानुसार लाल मिर्च पाउडर\n - स्वादानुसार नमक\n - बारीक कटी हरी धनिया</string>
    <string name="discription14">- ककड़ी - 2 (100 ग्राम)\n - टमाटर - 2 (100 ग्राम)\n - दही - 2 कप (500 ग्राम)\n - तेल - 1-2 छोटी चम्मच\n - पुदीना पत्ते - 10-12\n - करी पत्ता - 10 - 12\n - हींग - 1 पिंच\n - हरी मिर्च - 1 (बारीक कटी हुई)\n - नमक - ¼ छोटी चम्मच से कम या स्वादानुसार\n - काला नमक - ½ छोटी चम्मच या स्वादानुसार\n - जीरा - ½ छोटी चम्मच</string>
    <string name="discription15">- दही को अच्छी तरह फैंट लीजिए. ककड़ी और टमाटर को अच्छे से धोकर सुखा कर डंठल हटा दें और बारीक काट कर तैयार कर लीजिए.\n - पुदीना के पत्ते और करी पत्तों को अच्छे से धोकर छोटा-छोटा काट लीजिए.\n - बारीक कटी ककड़ी और टमाटर को दही में डालकर मिक्स कर दीजिए. अब काला नमक, सादा नमक, बारीक कटी हरी मिर्च, पुदीने के पत्ते डाल कर अच्छी तरह मिला दीजिए.\n -छोटे पैन में तेल डालकर गरम कीजिये, तेल गरम होने पर जीरा डालिये, जीरा भूनने के बाद, हींग डाल दीजिये, करी पत्ता को बारीक काट कर डाल दीजिये, गैस बन्द कर दीजिये और तड़के को रायते के ऊपर डाल कर मिक्स कर दीजिए.\n - बहुत ही स्वादिष्ट ककड़ी टमाटर का रायता बनकर तैयार है. ककड़ी टमाटर का रायते को खाने के साथ परोसिये और खाइये.\n\n सुझाव: ककड़ी काटते समय उसे चख कर अवश्य देखिये, कभी ककड़ी कढ़वी निकल जाती है. टमाटर के बीज न पसन्द करते हों तो उन्हें भी हटा सकते हैं.</string>
    <string name="discription16">- आलू – 04 नग,\n - दही – 02 कप (फेंटा हुआ),\n - हरी मिर्च – 01 नग (कटी हुई),\n - भुना जीरा पाउडर – 01 चम्मच,\n - चाट मसाला – 01 चम्मच,\n - काली मिर्च पाउडर – चुटकी भर,\n - काला नमक – 1/2 चम्मच,\n - लाल मिर्च पाउडर – स्वादानुसार,\n - धनिया पत्ती – आवश्यकतानुसार,\n - नमक – स्वादानुसार।\n</string>
    <string name="discription17">- आलू रायता रेसिपी के लिये सबसे पहले आलू धो कर उबाल लें।\n - उबले आलुओं को ठंडा करके इन्हें छील लें और चाकू की मदद से छोटे-छोटे टुकड़ों में काट लें।\n - अब एक कटोरे में सभी सामग्री को अच्छे से मिला लें और ऊपर से भुने हुए जीरे का पाउडर, काली मिर्च का पाउडर, काला नमक और नमक छिड़कें।\n - अगर आप रायता को स्पाइसी बनाना चाहें, तो थोड़ा सा पिसा हुआ लाल मिर्च भी मिला सकते हैं।\n\n लीजिए आपकी आलू का रायता बनाने की विधि कम्‍प्‍लीट हुई। अब आपका स्‍वादिष्‍ट आलू का रायता तैयार है। बस इसे हरी धनिया से गार्निश करें और खाने के साथ परोसें।</string>
    <string name="discription20">- दही : 250 ग्राम\n - मटर के दाने : 150 ग्राम (उबले हुए)\n - नमक : स्वाद अनुसार\n - जीरा पाउडर : 1 छोटा चम्मच\n - लाल मिर्च पाउडर : 1/4 छोटा चम्मच\n</string>
    <string name="discription21">- एक प्याले में दही डालकर अच्छी तरह फेंट लीजिये.\n - उबले हुए मटर के दानों में से आधे दानों को एक अलग प्याले में डालकर मैश कर लीजिये.\n - अब फेंटे हुए दही में सभी सामग्री डालकर अच्छी तरह मिला लीजिये.\n\n झटपट तैयार है स्वादिष्ट मटर रायता जिसे आप परांठा, पुलाव और पूड़ी के साथ एन्जॉय कर सकते हैं.</string>
    <string name="discription51">- भाजी के लिए\n\n - एक प्रेशर कुकर में फूलगोभी, हरे मटर, गाजर और १ कप पानी डालकर प्रेशर कुकर के २ सीटी बजने तक पका लीजिए। प्रेशर कुकर के ढ़क्कन खोलने से पहले सारी भाप निकलने दीजिए।\n - एक गहरे नॉन-स्टिक पॅन में मक्ख़न गरम कीजिए और उसमें प्याज़ डालकर मध्यम आँच पर 2 मिनट के लिए भून लीजिए। उसमें शिमला मिर्च और मिर्च-लहसुन का पेस्ट डालकर मध्यम आँच पर 2 मिनट के लिए भून लीजिए। उसमें टमाटर, लाल मिर्च पाउडर, हल्दी पाउडर और 1/4 कप पानी डालकर अच्छी तरस से मिला लीजिए और उसे मध्यम आँच पर 3 मिनट के लिए बीच-बीच में हिलाते हुए पका लीजिए।\n - उसमें आलू, फूलगोभी के मिश्रण साथ में पानी और नमक डालकर अच्छी तरह से मिला लीजिए और उसे मध्यम आँच पर 4 मिनट के लिए बीच-बीच में हिलाते और मसलते हुए पका लीजिए।\n - उसमें निंबू का रस और धनिया डालकर अच्छी तरस से मिला लीजिए और एक तरफ रख दीजिए।\n\n - पाव के लिए\n - २ पाव को बीच में आडा रूप में काट लीजिए और एक तरफ रख दीजिए। एक नॉन-स्टिक तवा को गरम कीजिए और उसपर 1 टेबल-स्पून मक्ख़न डालकर काटे हुए पाव को फैलाकर उसपर रखिए। उसे मध्यम आँच पर दोनों तरफ हल्का भूरा और कुरकुरा होने तक पका लीजिए।\n - भाजी के साथ गरम पाव, प्याज़ और लेमन वेज परोसिए।</string>
    <string name="discription52">- पाव के लिए\n\n - १० लादी पाव\n - ५ टेबल-स्पून मक्ख़न\n - भाजी के लिए १ कप कटे हुए फूलगोभी\n - १/२ कप हरे मटर\n - १/२ कप कटे हुए गाजर\n - २ टेबल-स्पून मक्ख़न\n - १ कप बारीक कटा हुआ प्याज़\n - १/२ कप बारीक कटी हुई शिमला मिर्च\n - २ टेबल-स्पून लाल मिर्च-लहसुन का पेस्ट\n - १ कप कटे हुए टमाटर\n - १ १/२ टी-स्पून लाल मिर्च का पाउडर\n - १ १/२ टेबल-स्पून पाव भाजी मसाला\n - १/४ टी-स्पून हल्दी पाउडर\n - १ १/२ कप उबाले और मसले हुए आलू\n - नमक स्वादानुसार\n - २ टी-स्पून निंबू का रस\n - १/४ कप बरीक कटा हुआ धनिया\n\n - परोसने के लिए\n - १/२ कप बारीक कटा हुआ प्याज़\n - ५ लेमन वेज</string>
</resources>