<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nashta.AlooTikkiChat">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="315dp"
            android:layout_height="181dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/greenpea" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="188dp"
            android:text="@string/saamgri4"
            android:textColor="#FF0000"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="358dp"
            android:layout_height="139dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/discription20"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="559dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/discription21"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView11"
            android:text="@string/vidhi4"
            android:textColor="#FF0000"
            android:textSize="34sp"

            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </RelativeLayout>

</ScrollView>