<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nashta.AlooTikkiChat">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2000dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="317dp"
            android:layout_height="166dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/cucumber_sandwich_recipe_hindi" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="188dp"
            android:text="@string/saamgri4"
            android:textColor="#FF0000"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/discription52"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="359dp"
            android:layout_height="1293dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/discription51"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignStart="@+id/textView10"
            android:layout_marginStart="9dp"
            android:layout_marginTop="30dp"
            android:text="@string/vidhi4"

            android:textColor="#FF0000"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </RelativeLayout>

</ScrollView>